--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 </td></tr>
 </table>
 
-<p> Download TraceBench (<a class="zip_download_link" href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>, <a class="tar_download_link" href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>). Maybe you also need <a href='http://mtracer.github.io/MTracer-Viz/'>MTracer-Viz</a> for visualization.</p>
-
-
+<p> Download TraceBench (<a href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>, <a href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>). Maybe you also need <a href='http://mtracer.github.io/MTracer-Viz/'>MTracer-Viz</a> for visualization.</p>
+<a class="zip_download_link" href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>
+<a class="tar_download_link" href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>
 
 <a name="start"></a><br>
 <p><h2>Getting Start</h2></p>
