--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
 </td></tr>
 </table>
 
-<p> Download TraceBench (<a href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>, <a href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>). Maybe you also need <a href='http://mtracer.github.io/MTracer-Viz/'>MTracer-Viz</a> for visualization.</p>
-<a class="zip_download_link" href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>
-<a class="tar_download_link" href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>
+<div> Download TraceBench (<a href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>, <a href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>).</div><a class="zip_download_link" href="https://github.com/mtracer/TraceBench/zipball/master">zip</a><a class="tar_download_link" href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>
+<div>Maybe you also need <a href='http://mtracer.github.io/MTracer-Viz/'>MTracer-Viz</a> for visualization.</div>
 
 <a name="start"></a><br>
 <p><h2>Getting Start</h2></p>
