--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 <div>}</div>
 </td></tr>
 </table>
-
-<div> Download TraceBench (<a href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>, <a href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>).</div><a class="zip_download_link" href="https://github.com/mtracer/TraceBench/zipball/master">zip</a><a class="tar_download_link" href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>
+<a class="zip_download_link" href="https://github.com/mtracer/TraceBench/zipball/master">zip</a><a class="tar_download_link" href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>
+<div> Download TraceBench (<a href="https://github.com/mtracer/TraceBench/zipball/master">zip</a>, <a href="https://github.com/mtracer/TraceBench/tarball/master">tar.gz</a>).</div>
 <div>Maybe you also need <a href='http://mtracer.github.io/MTracer-Viz/'>MTracer-Viz</a> for visualization.</div>
 
 <a name="start"></a><br>
