--- a/applications.html
+++ b/applications.html
@@ -71,26 +71,26 @@
 
 <div>[1] I. Beschastnikh, Y. Brun, M.D. Ernst, A. Krishnamurthy, and T.E. Anderson, "Mining temporal invariants from partially ordered logs," FSE 2011, pp. 448-451. ACM Association2011.<div>
 <div>[2] I. Beschastnikh, J. Abrahamson, Y. Brun, and M. D. Ernst, "Synoptic: Studying Logged Behavior with Inferred Models,"
-<div>[3] T. Ohmann, M. Herzberg, S. Fiss, A. Halbert, M. Palyart, I. Beschastnikh, and Y. Brun, "Behavioral resource-aware model inference," ASE 2014, pp. 19每30. ACM Association, 2014.</div>
-<div>[4] H. Mi, H. Wang, G. Yin, H. Cai, Q. Zhou, and T. Sun, "Performance problems diagnosis in cloud computing systems by mining request trace logs," NOMS 2012, pp. 893每899. IEEE Computer Society, 2012.</div>
-<div>[5] H. Mi, H. Wang, Y. Zhou, M.R. Lyu, and H. Cai, "Localizing root causes of performance anomalies in cloud computing systems by analyzing request trace logs," Science China: Information Science, vol. 55, no. 12, pp. 2757每2773, 2012.</div>
-<div>[6] H. Mi, H. Wang, Y. Zhou, M.R. Lyu, and H. Cai, "Toward fine grained, unsupervised, scalable performance diagnosis for production cloud computing systems," IEEE Transactions on Parallel and Distributed Systems, vol. 24, no. 6, pp. 1245每1255, 2013.</div>
-<div>[7] R.R. Sambasivan, A.X. Zheng, M.D. Rosa, E. Krevat, S. Whitman, M. Stroucken, W. Wang, L. Xu, and G.R. Ganger, "Diagnosing performance changes by comparing request flows," NSDI 2011, pp. 43每56. USENIX Association, 2011.</div>
-<div>[8] P. Reynolds, C.E. Killian, J.L. Wiener, J.C. Mogul, M.A. Shah, and A. Vahdat, "Pip: Detecting the unexpected in distributed systems," NSDI 2006, pp. 115每128. USENIX Association, 2006.</div>
-<div>[9] M. Chow, D. Meisner, J. Flinn, D. Peek, and T.F. Wenisch, "The Mystery Machine: End-to-end performance analysis of large-scale Internet services," OSDI 2014, pp. 217每231. USENIX Association, 2014.</div>
+<div>[3] T. Ohmann, M. Herzberg, S. Fiss, A. Halbert, M. Palyart, I. Beschastnikh, and Y. Brun, "Behavioral resource-aware model inference," ASE 2014, pp. 19-30. ACM Association, 2014.</div>
+<div>[4] H. Mi, H. Wang, G. Yin, H. Cai, Q. Zhou, and T. Sun, "Performance problems diagnosis in cloud computing systems by mining request trace logs," NOMS 2012, pp. 893-899. IEEE Computer Society, 2012.</div>
+<div>[5] H. Mi, H. Wang, Y. Zhou, M.R. Lyu, and H. Cai, "Localizing root causes of performance anomalies in cloud computing systems by analyzing request trace logs," Science China: Information Science, vol. 55, no. 12, pp. 2757-2773, 2012.</div>
+<div>[6] H. Mi, H. Wang, Y. Zhou, M.R. Lyu, and H. Cai, "Toward fine grained, unsupervised, scalable performance diagnosis for production cloud computing systems," IEEE Transactions on Parallel and Distributed Systems, vol. 24, no. 6, pp. 1245-1255, 2013.</div>
+<div>[7] R.R. Sambasivan, A.X. Zheng, M.D. Rosa, E. Krevat, S. Whitman, M. Stroucken, W. Wang, L. Xu, and G.R. Ganger, "Diagnosing performance changes by comparing request flows," NSDI 2011, pp. 43-56. USENIX Association, 2011.</div>
+<div>[8] P. Reynolds, C.E. Killian, J.L. Wiener, J.C. Mogul, M.A. Shah, and A. Vahdat, "Pip: Detecting the unexpected in distributed systems," NSDI 2006, pp. 115-128. USENIX Association, 2006.</div>
+<div>[9] M. Chow, D. Meisner, J. Flinn, D. Peek, and T.F. Wenisch, "The Mystery Machine: End-to-end performance analysis of large-scale Internet services," OSDI 2014, pp. 217-231. USENIX Association, 2014.</div>
 <div>[10] H. Mi, H. Wang, G. Yin, H. Cai, Q. Zhou, T. Sun, and Y. Zhou, "Magnifier: Online Detection of Performance Problems in Large-Scale Cloud Computing Systems," SCC 2011, pp. 418--425. IEEE Computer Society, 2011.</div>
-<div>[11] P. Barham, A. Donnelly, R. Isaacs, and R. Mortier, "Using Magpiefor request extraction and workload modelling," OSDI 2004), pp. 259每272. USENIX Association, 2004.</div>
-<div>[12] Y. Zhuang, E. Gessiou, S. Portzer, F. Fund, M. Muhammad, I. Beschastnikh, and J. Cappos, "NetCheck: Network diagnoses from blackbox traces," NSDI 2014, pp. 115每128. USENIX Association, 2014.</div>
-<div>[13] L.R. Sivalingam, J. Padhye, S. Agarwal, R. Mahajan, I. Obermiller, and S. Sayandeh, "AppInsight: Mobile app performance monitoring in the wild," OSDI＊12, pp. 107每120. USENIX Association, 2012.</div>
+<div>[11] P. Barham, A. Donnelly, R. Isaacs, and R. Mortier, "Using Magpiefor request extraction and workload modelling," OSDI 2004), pp. 259-272. USENIX Association, 2004.</div>
+<div>[12] Y. Zhuang, E. Gessiou, S. Portzer, F. Fund, M. Muhammad, I. Beschastnikh, and J. Cappos, "NetCheck: Network diagnoses from blackbox traces," NSDI 2014, pp. 115-128. USENIX Association, 2014.</div>
+<div>[13] L.R. Sivalingam, J. Padhye, S. Agarwal, R. Mahajan, I. Obermiller, and S. Sayandeh, "AppInsight: Mobile app performance monitoring in the wild," OSDI＊12, pp. 107-120. USENIX Association, 2012.</div>
 <div>[14] W. Eberle and L. B. Holder, "Discovering structural anomalies in graph-based data," ICDMW 2007, 2007.</div>
 <div>[15] R. Jin, C. Wang, D. Polshakov, S. Parthasarathy, and G. Agrawal, "Discovering frequent topological structures from graph datasets," KDD 2005, 2005.</div>
-<div>[16] J. Zhou, Z. Chen, J. Wang, Z. Zheng, and W. Dong, "A runtime verification based trace-oriented monitoring framework for cloud systems," ISSREW 2014, pp. 152每155. IEEE Computer Society, 2014.</div>
+<div>[16] J. Zhou, Z. Chen, J. Wang, Z. Zheng, and W. Dong, "A runtime verification based trace-oriented monitoring framework for cloud systems," ISSREW 2014, pp. 152-155. IEEE Computer Society, 2014.</div>
 <div>[17] I. Beschastnikh, Y. Brun, M. D. Ernst, A. Krishnamurthy, and T. E. Anderson, "Inferring Models of Concurrent Systems from Logs of Their Behavior with CSight,"  ICSE 2014, pp. 468-479. ACM Association 2014.</div>
 <div>[18] K. Nagaraj, C. Killian, and J. Neville, "Structured Comparative Analysis of Systems Logs to Diagnose Performance Problems," NSDI 2012, pp. 353-366. USENIX Association, 2012.</div>
 <div>[19] I. Beschastnikh, Y. Brun, J. Abrahamson, M. D. Ernst, and A. Krishnamurthy, "Unifying FSM-Inference Algorithms through Declarative Specification," ICSE 2013, pp. 252-261. 2013.</div>
 <div>[20] I. Krka, Y. Brun, and N. Medvidovic, "Automatic Mining of Specifications from Invocation Traces and Method Invariants," FSE 2014. ACM Association, 2014.</div>
 <div>[21] X. Zhao, Y. Zhang, D. Lion, M. FaizanUllah, Y. Luo, D. Yuan, and M. Stumm, "lprof : A Non-intrusive Request Flow Profiler for Distributed Systems," OSDI 2014, pp. 629-644. USENIX Association, 2014.</div>
-<div>[22] P.O. Meredith, D. Jin, D. Griffith, F. Chen, and G. Rosu, "An overview of the MOP runtime verification framework,§ International Journal on Software Tools for Technology Transfer, vol. 14, no. 3, pp. 249每289, 2012.</div>
+<div>[22] P.O. Meredith, D. Jin, D. Griffith, F. Chen, and G. Rosu, "An overview of the MOP runtime verification framework,§ International Journal on Software Tools for Technology Transfer, vol. 14, no. 3, pp. 249-289, 2012.</div>
 <div>[23] F. Ryckbosch and A. Diwan, "Analyzing performance traces using temporal formulas," Software: Practice and Experience, 2014.</div>
 <div>[24] C.Y. Chiu, C.T. Yeh, and Y.J. Lee, "Frequent Pattern based User Behavior Anomaly Detection for Cloud System," TAAI 2013, pp. 61-66. IEEE Computer Society, 2013.</div>
 <div>[25] J.G. Lou, Q. Fu, S. Yang, Y. Xu, and J. Li, "Mining Invariants from Console Logs for System Problem Detection," Annual Technical Conference. USENIX Association, 2010.</div>
